assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=New+Amsterdam&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Lora", serif;
    --secondary-font: "New Amsterdam", sans-serif;
    --primary-color: #00C143; /* dark pastel green */
    --primary-color-dark: #008A33; /* forest green */
    --secondary-color: #4E382D; /* brown */
    --highlight-color: #333333; /* charcoal grey */
    --highlight-color-light: #EBDAC2; /* champagne */
    --bs-table-bg:#4e382d;
}

/* Global styles */

body {
    font-family: var(--primary-font);
    background-color: var(--highlight-color-light);
    color: var(--secondary-color);
    font-size: 1.2rem;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
}

h1 {
    font-weight: 600;
    font-size: 5rem;
    color: #4E382D;
    text-align: center;

}

h2    {
    font-size: 4rem;
    margin-bottom: 3%;
    text-align: center;
}

h3 {
    font-size: 3.5rem;
}

h4 {
    font-size: 3rem;
}

h5 {
    font-size: 2rem;
    }


h6 {
    font-size: 1.4rem;
}

/* Media queries for responsive styling */

/* Medium screens (tablets and smaller) */
@media (max-width: 992px) {
    h2 {
        font-size: 3.5rem;
    }
    h3 {
        font-size: 3rem;
    }
    h4 {
        font-size: 2.5rem;
    }
    h5 {
        font-size: 2rem;
    }
}

/* Small screens (mobile) */
@media (max-width: 768px) {
    h1 {
        font-size: 3.5rem;
    }
    h2 {
        font-size: 3rem;
    }
    h3 {
        font-size: 2rem;
    }
    h4 {
        font-size: 2rem;
    }
    h5 {
        font-size: 1.6rem
    }
    h6 {
        font-size: 1.2rem;
    }
}

/* Extra small screens (small mobile devices) */
@media (max-width: 576px) {
    h1 {
        font-size: 3rem;
    }
    h2 {
        font-size: 2.5rem;
    }
    h3 {
        font-size: 1.8rem;
    }
    h4 {
        font-size: 1.6rem;
    }
    h5 {
        font-size: 1.4rem
    }
    h6 {
        font-size: 1rem;
    }
}

/* Header */
#header h2 {
    font-family: var(--primary-font);
    font-size: 2.5rem;

}

#header img {
    max-height: 400px;
    border-radius: 3px;
}

#header {
    background-size: cover; 
    background-position: center; 
    padding: 4% 15% 4% 15%;
  }

#header h4 {
    color: var(--primary-color-dark);
}

#header .custom-button-alt {
    border: 2px solid var(--primary-color-dark)!important;
    background-color: var(--primary-color-dark)!important;

}

/* Buttons */

.custom-button-filled {
    border: 2px solid var(--secondary-color);
    background-color: var(--secondary-color);
    color: var(--highlight-color-light);
    font-family: var(--secondary-font)!important;
}

.custom-button-filled:hover {
    border: 2px solid var(--secondary-color);
    background-color: var(--highlight-color-light);
    color: var(--secondary-color);
    font-family: var(--secondary-font)!important;

}

.custom-button-alt {
    border: 2px solid var(--primary-color);
    background-color: var(--primary-color);
    color: var(--highlight-color-light);
    font-family: var(--secondary-font)!important;
    font-size:larger;

}

.custom-button-alt:hover {
    border: 2px solid var(--secondary-color);
    background-color: var(--highlight-color-light);
    color: var(--secondary-color);
    font-family: var(--secondary-font)!important;

}

.custom-button-outline {
    border: 3px solid var(--secondary-color);
    padding: 7px 25px;
    background-color: var(--highlight-color-light);
    color: var(--secondary-color);
}

.custom-button-outline:hover {
    background-color: var(--secondary-color);
    border: 3px solid var(--highlight-color-light);

    color: var(--highlight-color-light);
}

/* Navbar */

#navbar {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

/* Target active links in the navbar */
.navbar .nav-link.active {
    color: var(--highlight-color-light);
}

/* Target active dropdown items */
.navbar .nav-link.show {
    color: var(--highlight-color-light);
}

/* Navbar logo size */
#navbar .logo {
    width: 100px;

}

/* Change navbar toggler border */
.navbar-toggler {
    border-color: var(--highlight-color-light) !important;
}

/* Change navbar toggler color */
.navbar-toggler-icon {
    filter: brightness(0) saturate(100%) invert(91%) sepia(15%) saturate(200%) hue-rotate(180deg);
}

    /* Navbar text styling */
.navbar-text img {
    width: 30px
}

.navbar-text a {
    color: var(--primary-color);
    font-size: 2rem;
    font-family: var(--secondary-font);
}

.navbar-text a:hover{
    color: var(--highlight-color-light);
}

.navbar-nav .nav-link {
    font-family: var(--secondary-font);
    font-size: 2rem;
    color: var(--primary-color);
}

.navbar-nav .nav-link:hover {
    color: var(--highlight-color-light);

}

/* Navbar dropdown styling */
.dropdown-item {
    color: var(--primary-color);
    background-color: var(--secondary-color);
    font-family: var(--secondary-font);
}

.dropdown-menu {
    --bs-dropdown-bg:var(--secondary-color)
}

.dropdown-menu .dropdown-item:hover {
    background-color: var(--secondary-color); /* Desired hover background color */
    color: var(--highlight-color-light); /* Optional: text color on hover */
}



/* Services */
#services {
    background-color: var(--secondary-color);
}

.custom-icon {
    width: 4.5rem;
    padding-top: 10%;
    padding-left: 10%;

}

.icon-heading {
    display: flex; 
    align-items: center; /* Align vertically in the center */
    gap: 8px; /* Add space between icon and text */
  }

.heading-icon {
    width: 3.3rem;

}

.card {
    background-color: var(--highlight-color-light) !important; 
    border: 2px solid var(--highlight-color-light) !important; 
    color: var(--secondary-color); 
  }

/* Gallery section */
#gallery {
    background-color: var(--secondary-color);
  }
  
  .scroll-container {
    position: relative;
    width: 100%;
    height: 100vh; /* Full viewport height */
    overflow: hidden;
    background-color: var(--secondary-color);
  }
  
  .masonry {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(420px, 1fr)); /* Flexible grid with 420px minimum size */
    grid-gap: 20px; /* 20px gap between images */
    grid-auto-rows: 280px; /* Set the height of each row to be 280px (horizontal images) */
    animation: scroll-left 20s linear infinite;
    width: 200%; /* Increased width to allow scrolling */
  }
  
  .masonry img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 8px;
    display: block;
    transition: transform 0.3s ease-in-out; /* Add smooth scaling transition */
  }
  
  /* Create the masonry effect by varying image heights */
  .masonry img:nth-child(odd) {
    grid-row-end: span 2; /* Odd images will span 2 rows */
  }
  
  .masonry img:nth-child(even) {
    grid-row-end: span 1; /* Even images will span only 1 row */
  }
  
  /* Fading Effect on Edges */
  .scroll-container::before,
  .scroll-container::after {
    content: '';
    position: absolute;
    top: 0;
    width: 50px;
    height: 100%;
    z-index: 2;
    pointer-events: none;
  }
  
  .scroll-container::before {
    left: 0;
    background: linear-gradient(to right, var(--secondary-color), rgba(248, 249, 250, 0));
  }
  
  .scroll-container::after {
    right: 0;
    background: linear-gradient(to left, var(--secondary-color), rgba(248, 249, 250, 0));
  }
  
  /* Smooth scrolling effect */
  @keyframes scroll-left {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(-50%); /* Ensure the scroll is across the entire container */
    }
  }

  /* Testimonials styling */
  .bi-quote {
    font-size: xxx-large;
  }

  .testimonials h5,
  .testimonials h2 {
    color: var(--primary-color-dark);
  }

  /* About Page */

  #certification {
    max-width: 400px;
}

#team h2,
#team h3,
#team a {
    color: var(--primary-color-dark);

}

.team-members img {
    width: 150px
  }

  /* Services Page */
#emergency-number {
    color: red;
}
#emergency-number a {
    color: red;
}
.card-image-top {
    max-height: 357px;
}

/* Contact form */
#contact h2,
#contact .form-label {
    color: var(--primary-color-dark);
}

/* Footer */

#footer {
    background-image: url('../images/tree-forest.png');
    background-size: cover; 
    background-position: center; 
    background-repeat: no-repeat; 
    min-height:600px; /* Adjust height as needed */
    position: relative; 
    color: var(--primary-color);
    z-index: 1; 
  }

.form-label {
    font-weight: 700;
    font-size: large;
    text-shadow: -3px -3px 3px #EBDAC2, 
    3px -3px 3px #EBDAC2, 
    -3px 3px 3px #EBDAC2, 
    3px 3px 3px #EBDAC2;
}

#footer .contact-us,
#footer .nav-link,
#footer a,
#footer .quick-links,
#footer .contact-us i,
#footer .quick-links i,
#footer .contact-us address,
#footer .quick-links ul,
#footer .contact-us address i,
#footer .quick-links ul li a {
    font-size: 1.2rem;
    color: #EBDAC2;
}


a {
    color: var(--primary-color);
    font-size: xx-large;
}

#footer h3, .nav-link, address, #footer i {
    text-shadow: -3px -3px 3px var(--secondary-color), 
    3px -3px 3px var(--secondary-color), 
    -3px 3px 3px var(--secondary-color), 
    3px 3px 3px var(--secondary-color);
}

.hours-table {
    background-color: var(--secondary-color);
    color: var(--highlight-color-light);
}

